--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "test": "cypress run",  
+    "open": "cypress open"
+  },   
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Cypress tests for Demoblaze",
   "devDependencies": {
-    "cypress": "^14.2.1"
+    "cypress": "^14.2.1"  
   }
 }
