--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -23,5 +23,18 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Cache Cypress binary
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/Cypress
+          key: ${{ runner.os }}-cypress-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-cypress-
+
+      - name: Install Cypress
+        run: npm install cypress@14.2.1
+
       - name: Run Cypress tests
         uses: cypress-io/github-action@v5
+        with:
+          start: npm start
