--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -2,52 +2,26 @@ name: Cypress Tests
 
 on:
   push:
-    branches:
-      - "main"
+    branches: [ main ]
   pull_request:
-    branches:
-      - "main"
-  workflow_dispatch:
+    branches: [ main ]
 
 jobs:
   cypress-run:
-    runs-on: ubuntu-latest  # Der GitHub Action Runner läuft auf einem Ubuntu-Image
+    runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout des Repositories
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-      # 2. Setup Node.js
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: '18'  # Node.js-Version 18
+          node-version: '18' 
 
-      # 3. Cache von Node-Modulen (optional)
-      - name: Cache Node modules
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-modules-
-
-      # 4. Installation der Abhängigkeiten
       - name: Install dependencies
-        run: npm ci  # Installation der Abhängigkeiten basierend auf der package-lock.json
+        run: |
+          npm ci || npm install
 
-      # 5. Anwendung starten (optional, falls notwendig)
-      - name: Start application
-        run: npm start &
-        env:
-          CI: true
-
-      # 6. Cypress-Tests ausführen
       - name: Run Cypress tests
-        uses: cypress-io/github-action@v5
-        with:
-          start: npm start  # Der Befehl, der für das Starten der Anwendung benötigt wird
-          wait-on: 'http://localhost:8080'  # Wartet, bis der Server gestartet ist
-
-
+        run: npx cypress run
