--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -17,11 +17,15 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 'node' 
+          node-version: '23.9.0'
 
       - name: Install dependencies
+        run: npm ci || npm install
+
+      - name: Start http-server
         run: |
-          npm ci || npm install
+          npm run start &
+          npx wait-on http://localhost:8080
 
       - name: Run Cypress tests
         run: npx cypress run
