--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '23.9.0'
+          node-version: '.nvmrc'
 
       - name: Install dependencies
         run: npm ci || npm install
