--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -17,15 +17,15 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '.nvmrc'
+          node-version: '18'
 
       - name: Install dependencies
-        run: npm ci || npm install
+        run: npm install
 
-      - name: Start http-server
+      - name: Start test server
         run: |
-          npm run start &
-          npx wait-on http://localhost:8080
+          npx http-server -p 8080 &
+          sleep 5 # Warte, bis der Server läuft
 
       - name: Run Cypress tests
-        run: npx cypress run
+        run: npm run test
